# near-halo2-verifier

./: Cargo.toml  README.md
src/: kzg_decider.rs  lib.rs  loader.rs  multi_miller_loop.rs  transcript.rs  util.rs  verifier.rs
