[package]
name = "near-halo2-verifier"
version = "1.0.0"
authors = ["Ivan Oleynikov <ivan.oleynikov95@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
borsh = "0.9.3"
near-sdk = { git = "https://github.com/zeropoolnetwork/near-sdk-rs", branch = "feature/alt_bn128_new", features = ["unstable"] }
ff-uint = { version = "0.2.4", default-features = false }

# One could get rid of these two, we barely use them:
derive_more = { version = "0.99.17" }
lazy_static = { version = "1.4.0" }

[dependencies.halo2_curves]
git = "https://github.com/zeropoolnetwork/halo2curves"
branch = "zeropool-near"
package = "halo2curves"

[patch."https://github.com/privacy-scaling-explorations/halo2curves"]
halo2curves = { git = "https://github.com/zeropoolnetwork/halo2curves", branch = "zeropool-near" }

[dependencies.halo2_proofs]
git = "https://github.com/privacy-scaling-explorations/halo2"
tag = "v2023_04_20"

[dependencies.snark_verifier]
git = "https://github.com/zeropoolnetwork/snark-verifier"
package = "snark-verifier"
branch ="zeropool-near"
features = []

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
hex-literal = "0.3.4"
near-crypto = "0.14.0"
rand_core = "0.6.4"
rand = "0.8.5"
itertools = "0.11.0"

[features]
default = []
heavy_tests = []
